<resources>
    <string name="app_name">meuApp</string>
    <string name="nomeApp">UNIFLIX</string>
    <string name="placeholder_email">E-mail</string>
    <string name="placeholder_senha">Senha</string>
    <string name="placeholder_senhanov">Senha Novamente</string>
    <string name="placeholder_usuario">Usuário</string>
    <string name="textview_usuario">Usuário</string>
    <string name="textview_email">E-mail</string>
    <string name="textview_senha">Senha</string>
    <string name="textview_senhanov">Repita a senha</string>
    <string name="button_cadastrar">CADASTRAR</string>
    <string name="button_face">Log in With Facebook</string>
    <string name="button_google">Log in With Google</string>
    <string name="posterfilme">posterfilme</string>
</resources>