<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.SignInActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#393636"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_marginTop="80dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/titulo_romances"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="0dp"
                android:text="@string/nomeApp"
                android:textAlignment="center"
                android:textColor="#FF0000"
                android:textSize="36sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="85dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/titulo_drama"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:text="@string/textview_usuario"
                android:textAlignment="textStart"
                android:textColor="#FF0000"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/editTextTextPersonName2"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"
                android:background="#FFFFFF"
                android:ems="10"
                android:hint="@string/placeholder_usuario"
                android:inputType="textPersonName"
                android:textColorHint="#8C8484" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="85dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="55dp"
                android:text="@string/textview_email"
                android:textColor="#FF0000"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/editTextTextEmailAddress"
                android:layout_width="300dp"
                android:layout_height="41dp"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"
                android:background="#FFFFFF"
                android:ems="10"
                android:hint="@string/placeholder_email"
                android:inputType="textEmailAddress"
                android:textColorHint="#8C8484" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="85dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="55dp"
                android:text="@string/textview_senha"
                android:textColor="#FF0000"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/editTextTextPassword2"
                android:layout_width="300dp"
                android:layout_height="41dp"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"
                android:background="#FFFFFF"
                android:ems="10"
                android:hint="@string/placeholder_senha"
                android:inputType="textPassword"
                android:textColorHint="#8C8484" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="85dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="55dp"
                android:text="@string/textview_senhanov"
                android:textColor="#FF0000"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/editTextTextPassword3"
                android:layout_width="300dp"
                android:layout_height="41dp"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"
                android:background="#FFFFFF"
                android:ems="10"
                android:hint="@string/placeholder_senhanov"
                android:inputType="textPassword"
                android:textColorHint="#8C8484" />
        </LinearLayout>

        <Button
            android:id="@+id/button"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_marginBottom="10dp"
            android:background="#FF0000"
            android:text="@string/button_cadastrar"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF"
            android:textSize="16sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button2"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_marginBottom="10dp"
            android:background="#005CFF"
            android:text="@string/button_face"
            android:textColor="#FFFFFF"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button3"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:background="#FF3511"
            android:text="@string/button_google"
            android:textColor="#FFFFFF"
            android:textStyle="bold" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>